Link properties: must be transitive over private dependency on static library

Fixes: #20022